2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/texmf.am: Allow subdir-objects.
	* configure.ac: Use KPSE_COND_MINGW32 and KPSE_WIN32_CALL.

2013-01-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop useless AC_TYPE_LONG_LONG_INT.

2013-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, am/texmf.am, configure.ac, trap.test, trip.test,
	triptrap-sh: Enable parallel-tests.

2013-01-10  Khaled Hosny  <khaledhosny@eglug.org>

	* configure.ac: Check if system has stdbool.h

2013-01-06  Khaled Hosny  <khaledhosny@eglug.org>

	* texmfmp.h [XeTeX]: Support input pipes.

2013-01-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check for hstrerror() needed by luaTeX.

2013-01-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check if system defines and declares strndup().

2013-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h [XeTeX]: We must #include <zlib.h> and
	<teckit/TECkit_Common.h> before "XeTeX_ext.h" to avoid typedef
	duplications.

2013-01-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, am/bootstrap.am, am/cweb.am: Do not distribute
	output from parallel-tests.
	* configure.ac: Temporarily disable parallel-tests.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* silent-sh: New shell script for some silent rules.
	* configure.ac: Create silent-sh.
	* Makefile.am (makecpool, tangle, tangleboot, ctangle, tie),
	am/bootstrap.am, am/cweb.am, ctangleboot-sh.in, tangle-sh.in,
	web2c-sh.in: Enable silent rules.

2012-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* w2c/config.h [MinGW32]: Define LONGINTEGER_{TYPE ,PRI} as for
	native Windows, i.e., as __int64 and "I64".

2012-11-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Add pixman, cairo, and harfbuzz
	for future MetaPost and XeTeX.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: No need to check for Annot::decRefCnt with
	poppler 0.18 or better.