@@ -1,10 +1,10 @@
 #! /bin/sh
 
-# Copyright (C) 2010 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2010-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-test -d tests || mkdir -p tests
+test -d ptests || mkdir -p ptests
 
 TEXMFCNF=$srcdir/../kpathsea \
-  ./ptftopl -verbose $srcdir/tests/cmr10 tests/xcmr10 || exit 1
+  ./ptftopl -verbose $srcdir/tests/cmr10 ptests/xcmr10 || exit 1
 
